css/custom.css
/* ... */
.testimonial-item .testimonial-quote-image img{
	max-width: 50px;
}

.testimonial-item .testimonial-content{
	margin-bottom: 30px;
}

.testimonial-content p{
	color: var(--primary-color);
	font-size: 18px;
	font-weight: 500;
	margin: 0;
}

.testimonial-item .testimonial-body{
	display: flex;
	align-items: center;
}

.testimonial-body .author-image{
	margin-right: 10px;
}

.testimonial-body .author-image img{
	max-width: 64px;
	aspect-ratio: 1 / 1;
	object-fit: cover;
	border-radius: 50%;
}

.testimonial-body .author-content{
	width: calc(100% - 74px);
}

.testimonial-body .author-content h3{
	font-size: 20px;
	font-weight: 600;
	text-transform: capitalize;
	margin-bottom: 5px;
}

.testimonial-body .author-content p{
	text-transform: capitalize;
	margin: 0;
}

.testimonial-btn{
	display: flex;
	align-items: center;
	justify-content: left;
	margin-top: 40px;
}

.testimonial-slider .testimonial-button-next,
.testimonial-slider .testimonial-button-prev{
	position: relative;
	width: 40px;
	height: 40px;
	background-color: var(--accent-color);
	border-radius: 6px;
	transition: all 0.4s ease-in-out;
}

.testimonial-slider .testimonial-button-next{
	margin-left: 20px;
}


.testimonial-slider .testimonial-button-next:hover,
.testimonial-slider .testimonial-button-prev:hover{
	background-color: var(--primary-color);
}

.testimonial-slider .testimonial-button-next::before,
.testimonial-slider .testimonial-button-prev::before{
	content: '';
	position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: url("../images/arrow-white.svg") no-repeat center center;
    background-size: 12px auto;
    transform: rotate(45deg);
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 0.4s ease-in-out;
}

.testimonial-slider .testimonial-button-prev::before{
	transform: rotate(225deg);
}

/************************************/
/***       12. Our Blog  Css	  ***/
/************************************/

.our-blog{
	position: relative;
	padding: 100px 0 70px;
	background: var(--secondary-color) url('../images/our-blog-bg.svg') no-repeat;
	background-position: top 60px center;
	background-size: auto;
}

.our-blog .icon-star-image{
	position: absolute;
    top: 50%;
    left: 0;
    transform: translate(50%, -50%);
	z-index: 0;
}

.blog-item{
	position: relative;
	height: calc(100% - 30px);
	margin-bottom: 30px;
	z-index: 1;
}

.blog-item .post-featured-image{
	border-radius: 30px;
	overflow: hidden;
	margin-bottom: 30px;
}

.blog-item .post-featured-image a{
	cursor: none;
	display: block;
}

.blog-item .post-featured-image img{
	border-radius: 30px;
	aspect-ratio: 1 / 0.66;
	object-fit: cover;
	transition: all 0.5s ease-in-out;
}

.blog-item:hover .post-featured-image img{
	transform: scale(1.1);
}

.post-item-body{
	margin-bottom: 15px;
}

.post-item-body h2{
	color: var(--primary-color);
	font-size: 20px;
	font-weight: 600;
	line-height: 1.5em;
	text-transform: capitalize;
	margin-bottom: 20px;
}

.post-item-body h2 a{
	color: inherit;
}

.post-item-body p{
	margin: 0;
}

.post-item-footer a.read-more-btn{
	position: relative;
	color: var(--accent-color);
	font-size: 14px;
	font-weight: 600;
	text-transform: capitalize;
	padding-right: 35px;
	transition: 0.5s ease-in-out;
}

.post-item-footer a.read-more-btn::after{
    content: '';
    position: absolute;
    top: -2px;
    right: 0;
    bottom: 0;
    background-image: url("../images/arrow-white.svg");
    background-repeat: no-repeat;
    background-position: center center;
	background-size: 10px auto;
	background-color: var(--accent-color);
	border-radius: 50%;
    width: 24px;
    height: 24px;
    transition: 0.4s ease-in-out;
}

.post-item-footer a.read-more-btn:hover::after{
	transform: rotate(45deg);
	background-color: var(--primary-color);
}

.post-item-footer a.read-more-btn:hover{
	color: var(--primary-color);
}

/************************************/
/***    13. Our Contact Us css	  ***/
/************************************/

.contact-now{
	padding: 100px 0;
}

.contact-google-map .google-map-iframe,
.contact-google-map .google-map-iframe iframe{
	width: 100%;
	height: 600px;
	border-radius: 30px;
}

.contact-google-map .google-map-iframe iframe{
	filter: grayscale(1);
	transition: all 0.3s ease-in-out;
}

.contact-google-map .google-map-iframe iframe:hover{
	filter: grayscale(0);
}

.contact-now-content{
	margin-left: 30px;
}

.contact-now-info{
	margin-bottom: 40px;
}

.contact-info-list{
	position: relative;
    padding-left: 38px;
    margin-bottom: 30px;
}

.contact-info-list:last-child{
	margin-bottom: 0;
}

.contact-info-list .icon-box{
    position: absolute;
    top: 0px;
    left: 0px;
}

.contact-info-list .icon-box img{
	width: 100%;
	max-width: 28px;
}

.contact-info-list .contact-info-content p{
	margin: 0;
}

/************************************/
/***        14. Footer css  	  ***/
/************************************/

footer.main-footer{
	padding: 100px 0 0;
	background: var(--primary-color) url('../images/footer-bg.svg') no-repeat;
	background-position: center center;
	background-size: auto;
}

.footer-logo{
	margin-bottom: 35px;
}

.footer-logo img{
	width: 100%;
	max-width: 270px;
}

.about-footer-content p{
	color: var(--white-color);
	margin-bottom: 0;
}

.footer-links h3{
	color: var(--white-color);
	font-size: 20px;
	font-weight: 600;
	text-transform: capitalize;
	margin-bottom: 20px;
}

.footer-links ul{
	list-style: none;
	margin: 0;
	padding: 0;
}

.footer-links ul li{
	margin-bottom: 10px;
}

.footer-links ul li:last-child{
	margin-bottom: 0;
}

.footer-links ul li a{
	color: var(--white-color);
	text-transform: capitalize;
	transition: all 0.3s ease-in-out;
}

.footer-links ul li:hover a{
	color: var(--accent-color);
}

.footer-quick-links,
.footer-social-links{
	margin-left: 50px;
}

.footer-copyright{
	border-top: 1px solid var(--divider-color);
	padding: 30px 0;
	text-align: center;
	margin-top: 60px;
}
/* ... */

